# app/Http/Controllers/API/TestController.php
@@ -2,18 +2,17 @@
 
 namespace App\Http\Controllers\API;
 
-/**
- * @OA\Get(
- *     path="/api/test",
- *     @OA\Response(response="200", description="Display a listing of projects.")
- * )
- */
-
 use App\Http\Controllers\Controller;
 use Illuminate\Http\Request;
 
 class TestController extends Controller
 {
+    /**
+     * @OA\Get(
+     *     path="/api/test",
+     *     @OA\Response(response="200", description="Display a listing of projects.")
+     * )
+     */
     /**
      * Display a listing of the resource.
      *
